[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-amazeing"
version = "1.0.0"
description = "Reusable maze generator for the A-Maze-ing 42 project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "agaleksa"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools.packages.find]
where = ["src"]
